stop chat input and progress bar from collapsing

--- a/public/scripts/extensions/quick-reply/style.less
+++ b/public/scripts/extensions/quick-reply/style.less
@@ -826,6 +826,10 @@
 				}
 			}
 
+            #qr--modal-send_textarea {
+                flex: 0 0 auto;
+            }
+
             #qr--modal-executeProgress {
                 --prog: 0;
                 --progColor: rgb(146, 190, 252);
@@ -833,6 +837,7 @@
                 --progSuccessColor: rgb(81, 163, 81);
                 --progErrorColor: rgb(189, 54, 47);
                 --progAbortedColor: rgb(215, 136, 114);
+                flex: 0 0 auto;
                 height: 0.5em;
                 background-color: var(--black50a);
                 position: relative;
